Fix issue with icon not fully shwon on small devices

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -426,7 +426,7 @@ a.button:any-link::after, button::after {
     content: "";
     width: 17px;
     height: 17px;
-    background-size: cover;
+    background-size: contain;
     background-image: url('../icons/icon_pink-arrow-right-md.png');
     background-repeat: no-repeat;
     margin-left: 8px;
